# file2header

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conanpublish.yml
cmake/: resources.cmake
src/: main.cpp
